稽古場案内を追加

--- a/index.html
+++ b/index.html
@@ -66,18 +66,34 @@
               開催予定
             </div>
             <div class="content_details">
-              <p>次の出演予定</p>
               <p>2021年5月1日 国立大劇場  吉村流吉村会</p>
             </div>
           </div>
         </div>
+        <!-- <div class="content">
+          <div class="title">
+            <div class="content_titile">
+              <a href="./school.html">吉村ゆい舞踊教室のご案内</a>
+            </div>
+          </div>
+        </div> -->
       <div class="content">
         <div class="title">
           <div class="content_titile">
             お問い合わせ
           </div>
           <div class="content_details">
-            <a href="https://yoshimura-ryu.com/">日本舞踊 一般社団法人 上方舞 <br>吉村流公式サイト / Yoshimuraryu</a>
+            <p>03-3263-0050</p>
+          </div>
+        </div>
+      </div>
+      <div class="content">
+        <div class="title">
+          <div class="content_titile">
+            稽古場紹介
+          </div>
+          <div class="content_details">
+            <a href="https://www.yoshimura-yui-buyoschool.com/">吉村ゆいの稽古場はこちら</a>
           </div>
         </div>
       </div>
