出演予定に変更

--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
         <div class="content">
           <div class="title">
             <div class="content_titile">
-              開催予定
+              出演予定
             </div>
             <div class="content_details">
               <p>2021年5月1日 国立大劇場  吉村流吉村会</p>
