延期メッセージの追加

--- a/index.html
+++ b/index.html
@@ -67,6 +67,7 @@
             </div>
             <div class="content_details">
               <p>2021年5月1日 国立大劇場  吉村流吉村会</p>
+              <p class="red-font">※2021年5月11日以降に延期</p>
             </div>
           </div>
         </div>
