--- a/index.html
+++ b/index.html
@@ -66,8 +66,9 @@
               出演予定
             </div>
             <div class="content_details">
-              <p>2021年5月1日 国立大劇場  吉村流吉村会</p>
-              <p class="red-font">※2021年5月11日以降に延期</p>
+              <p>2021年9月5日 国立大劇場 吉村流吉村会</p>
+              <p>2022年2月2日 国立大劇場 吉村ゆい舞の会</p>
+              <!-- <p class="red-font">※2021年5月11日以降に延期</p> -->
             </div>
           </div>
         </div>
