--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
             <div class="content_details">
               <p class="m">2021年9月5日 国立大劇場 吉村流吉村会</p>
               <p class="m">2022年2月2日 国立大劇場 吉村ゆい舞の會</p>
-              <p class="red-font">※2022年2月2日　吉村ゆい舞の會はコロナ事情に伴い中止いたします。</p>
+              <p class="">(2022年2月2日 国立大劇場 吉村ゆい舞の會はただいま延期とさせていただいております。)</p>
             </div>
           </div>
         </div>
