sendgrid承認用のページ作成

--- a/index.html
+++ b/index.html
@@ -97,6 +97,9 @@
           <div class="content_details">
             <a href="https://www.yoshimura-yui-buyoschool.com/">吉村ゆいの 稽古場はこちら</a>
           </div>
+          <div class="content_details">
+            <a href="sendgrid.html">sendgridページへ</a>
+          </div>
         </div>
       </div>
     </div>
